{
    "name": "Player",
    "maps": [
        {
            "name": "PlayerMain",
            "id": "1af5d896-c0de-43c0-b2e9-9afab735bd78",
            "actions": [
                {
                    "name": "move",
                    "type": "Value",
                    "id": "8baa02b5-1278-4800-b9d8-d41ad33236f8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "look",
                    "type": "Value",
                    "id": "09bcf39d-5e34-4065-89b4-1e957ebde2b5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interaction",
                    "type": "Button",
                    "id": "0aa30c0c-8b0a-452d-86e7-fcda4f819c90",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a9c4c720-61fb-4f4c-9dfa-e83508e25253",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eb77756d-4b70-403b-bfaa-52e93e133547",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0170601e-75d0-4e9e-955c-f9f5a12ac36e",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interaction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Schema controllo",
            "bindingGroup": "Schema controllo",
            "devices": []
        }
    ]
}